--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-
 #amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
@@ -11,3 +9,4 @@ dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
+!app-debug.apk
