did amplify setup for S3 and added code to dependencies, and manifest. Updated readme.

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -16,5 +16,18 @@
 				}
 			}
 		}
+	},
+	"auth": {
+		"gftastynomsd65cba56": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": []
+		}
+	},
+	"storage": {
+		"s309659393": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
