Fixed multiple bugs that occurred after using an older version of nodejs, which involved stackUpdateComplete error and issues with AWS CloudFormation. App now had AWS services of storage and auth besides api

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -9,8 +9,8 @@
 					"defaultAuthentication": {
 						"authenticationType": "API_KEY",
 						"apiKeyConfig": {
-							"description": "connecting to gftastynoms",
-							"apiKeyExpirationDays": 7
+							"description": "connecting to gfnoms API",
+							"apiKeyExpirationDays": "60"
 						}
 					}
 				}
