--- a/amplify/backend/auth/gftastynomsd65cba56/gftastynomsd65cba56-cloudformation-template.yml
+++ b/amplify/backend/auth/gftastynomsd65cba56/gftastynomsd65cba56-cloudformation-template.yml
@@ -85,6 +85,18 @@ Parameters:
                       
   dependsOn:
     Type: CommaDelimitedList
+      
+  triggers:
+    Type: String
+                
+  hostedUI:
+    Type: String
+                  
+  parentStack:
+    Type: String
+                
+  permissions:
+    Type: CommaDelimitedList
     
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
@@ -142,9 +154,6 @@ Resources:
       
       AutoVerifiedAttributes: !Ref autoVerifiedAttributes
       
-      
-      EmailVerificationMessage: !Ref emailVerificationMessage
-      EmailVerificationSubject: !Ref emailVerificationSubject
             
       Policies:
         PasswordPolicy:
@@ -160,6 +169,18 @@ Resources:
         SnsCallerArn: !GetAtt SNSRole.Arn
         ExternalId: gftastd65cba56_role_external_id
     
+  
+    
+    
+  
+    
+    
+  
+  
+   
+    
+  # Updating lambda role with permissions to Cognito
+  
   
   UserPoolClientWeb:
   # Created provide application access to user pool
@@ -229,7 +250,7 @@ Resources:
             - ' }'
             - '};'
       Handler: index.handler
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Timeout: '300'
       Role: !GetAtt 
         - UserPoolClientRole
